# patricio-rey-y-sus-vectorcitos-de-ricota

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
resources/: download_lyrics.py  letras.yaml  stopwords.txt
